LuxStudio/depl/pluto/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pluto
  labels:
    environment: test
