LuxStudio/depl/pluto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luxstudio-ingress
  namespace: pluto
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: studio.pluto.luxoria.bluepelicansoft.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: luxstudio-service
            port:
              number: 80
